# utils

./: .gitignore  arrow_maze_generator.py  civitai_auto_reactor.js  civitai_buzz_calculations.py  color_maze_generator.py  debing.py  describer.sh  disable_keyboard.py  emoji_maze_generator.py  enable_keyboard.sh  ethereum_data_storage_cost_calculator.py  exam_timer.py  itempicker.py  maze_solver.py  nickname_derpificator.py  reratio.py  screenshoter.sh  simple_maze_converter.py  statuschecker.sh  wikipedia_searcher.py  word_derpificator.py
color_maze_generator/: Cargo.toml
color_maze_generator/src/: main.rs
discorddumbstuff/: pyproject.toml  run.py
wordmix/: make_the_result.py
